# dvo_ws1516

./: .gitignore  Infos_TODO.txt
Literature_DirectImageAlignment/mvg_exercise/ex9_solution/: callErrAnalytic.m
ludicrous_project/: README
ludicrous_project/Matlab/: plotNonContinousLine.m  plotTrajectories.m  rgbd_dataset_freiburg1_deskour_trajectory.txt  test.txt
ludicrous_project/code/data/: datasets.txt  test_many.sh
ludicrous_project/code/data/K_freiburg2/: K.txt
ludicrous_project/code/data/freiburg1_xyz_first_10/: K.txt  groundtruth.txt  traj.txt
ludicrous_project/code/src/: ._Makefile  Exception.h  Makefile  alignment.cuh  common.h  dataset.hpp  dependences.dot  eigen_typedef.h  lieAlgebra.hpp  ludicrous  main.cu  preprocessing.cuh  run_all.sh  temp.hpp  tracker.hpp  tum_benchmark.hpp
ludicrous_project/results/: rgbd_dataset_freiburg1_desk_our_trajectory_WITH_weights.txt
ludicrous_project/results/rgbd_dataset_freiburg1_desk/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg1_desk2/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg2_desk/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg2_desk_with_person/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg3_sitting_halfsphere/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg3_sitting_rpy/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg3_sitting_static/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg3_sitting_xyz/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg3_walking_halfsphere/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg3_walking_rpy/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg3_walking_static/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
ludicrous_project/results/rgbd_dataset_freiburg3_walking_xyz/: gdist_cublas_trajectory.txt  gdist_nocublas_trajectory.txt  run_all_output.txt  tdist_cublas_trajectory.txt  tdist_nocublas_trajectory.txt
old_project1/code/: CMakeLists.txt  README.md
old_project1/code/data/freiburg1_xyz_first_10/: traj.txt
old_project1/code/data/freiburg3_long_office_household/: K.txt
old_project1/code/data/scripts/: createAssoc.py
old_project1/code/matlab-analysis/: main.m
old_project1/code/src/: analytic_jacobian.cuh  cuda_timer.cuh  dataset.hpp  dependences.dot  downsample.cuh  helpers.hpp  kernel_math.cuh  main.cu  numeric_jacobian.cuh  residual.cuh  tracker.hpp  tum_benchmark.hpp  viewer.hpp
old_project2/code/: CMakeLists.txt
old_project2/code/data/: traj.txt
old_project2/code/data/freiburg1_xyz_first_10/: depth.txt  rgb.txt  rgbd_assoc.txt  rgbd_assoc.txt~  traj.txt
old_project2/code/src/: GPUMem.cu  GPUMem.h  Jacobian.cu  Jacobian.h  Misc.cu  Misc.cuh  Preprocessing.cu  Preprocessing.h  Reduction.cu  Reduction.h  Residual.cu  Residual.h  Test.cu  Test.h  classes.txt  main.cu  save_ply.hpp  tum_benchmark.hpp
old_project3/code/basic algo/src/: downsample.cuh  hostFunctions.hpp  main.cu  pointCloud.cuh  residual.cuh
old_project3/code/evaluation/src_optimized/: deriveNumeric.cuh  main.cu  save_ply.hpp
(+12 files in other folders)
